# esp-idf-size

./: .cz.toml  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: create_gh_release.yml  dangerjs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  release_pypi.yml  sync-jira.yml
esp_idf_size/: __init__.py  __main__.py  core.py  deps.py  elf.py  format_csv.py  format_dot.py  format_json.py  format_raw.py  format_table.py  format_tree.py  log.py  main.py  mapfile.py  memorymap.py
esp_idf_size/chip_info/: esp32.yaml  esp32c2.yaml  esp32c3.yaml  esp32c5.yaml  esp32c6.yaml  esp32c61.yaml  esp32h2.yaml  esp32h21.yaml  esp32h4.yaml  esp32p4.yaml  esp32s2.yaml  esp32s3.yaml  esp32s31.yaml
esp_idf_size/docs/: readme.md
esp_idf_size/ng/: __main__.py  deps.py  elf.py  format_csv.py  format_json.py  format_json_tree.py  format_table.py  format_tree.py  log.py  main.py  mapfile.py  memorymap.py
esp_idf_size/ng/docs/: readme.md
idf_size/: core.py
idf_size/chip_info/: esp32h2.yaml
test/: app_esp32c5.map  app_esp32c61.map  app_esp32h2.map  app_esp32p4.map  conftest.py  expected_output  explicit_bytes.map  mem_test.py  mem_test.sh  noinit_hello_world_esp32.map  size_schema.json  test.sh  test_doc.py  test_formats.py  test_idf_size.py  test_memmap.py  test_parser.py  utils.py
test/legacy/: generate_artifacts.py  size_schema.json  test_size.py
test/legacy/artifacts/esp32/: archive_details.csv  archive_details.json  archive_details.text  archive_details_diff.csv  archive_details_diff.json  archive_details_diff.text  archive_details_diff_rev.csv  archive_details_diff_rev.json  archive_details_diff_rev.text  archives.csv  archives.json  archives.text  archives_diff.csv  archives_diff.json  archives_diff.text  archives_diff_rev.csv  archives_diff_rev.json  archives_diff_rev.text  bootloader.map  bootloader_summary.text  files.csv  files.json  files.text  files_diff.csv  files_diff.json  files_diff.text  files_diff_rev.csv  files_diff_rev.json  files_diff_rev.text  mapfile.map  mapfile_ref.map  summary.csv  summary.json  summary.text  summary_diff.csv  summary_diff.json  summary_diff.text  summary_diff_rev.csv  summary_diff_rev.json  summary_diff_rev.text
test/legacy/artifacts/esp32c2/: archive_details.csv  archive_details.json  archive_details.text  archive_details_diff.csv  archive_details_diff.json  archive_details_diff.text  archive_details_diff_rev.csv  archive_details_diff_rev.json  archive_details_diff_rev.text  archives.csv  archives.json  archives.text  archives_diff.csv  archives_diff.json  archives_diff.text  archives_diff_rev.csv  archives_diff_rev.json  archives_diff_rev.text  bootloader.map  bootloader_summary.text  files.csv  files.json  files.text  files_diff.csv  files_diff.json  files_diff.text  files_diff_rev.csv  files_diff_rev.json  files_diff_rev.text  mapfile.map  mapfile_ref.map  summary.csv  summary.json  summary.text  summary_diff.csv  summary_diff.json  summary_diff.text  (+3 more)
test/ng/: conftest.py  test_doc.py  test_formats.py  test_memmap.py  test_parser.py  utils.py
(+404 files in other folders)
