# SPDX-FileCopyrightText: 2024-2026 Espressif Systems (Shanghai) CO LTD
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-idf-size"
dynamic = ["version"]
description = "Firmware size analysis for ESP-IDF"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [
    { name = "Espressif Systems" },
]
keywords = ["espressif", "embedded", "project", "size"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "coverage",
    "jsonschema",
    "pytest",
    "pytest-cov",
    "czespressif",
]

[project.urls]
Homepage = "https://github.com/espressif/esp-idf-size"

[tool.setuptools.dynamic]
version = { attr = "esp_idf_size.__version__" }

[tool.setuptools.packages.find]
include = ["esp_idf_size*"]

[tool.setuptools.package-data]
esp_idf_size = ["chip_info/*", "docs/readme.md"]

# --- Commitizen (czespressif) ---
[tool.commitizen]
name = "czespressif"
version = "2.2.0"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_start_rev = "v1.0.2"
changelog_merge_prerelease = true
annotated_tag = true
bump_message = "change: Update version to $new_version"
version_files = [
    "esp_idf_size/__init__.py:__version__",
]

# --- Ruff ---
[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]
ignore = [
    "E221",  # multiple spaces before operator
    "E241",  # multiple spaces after ','
    "UP036", # version block is outdated (keep for py3.7 compat)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

# --- codespell ---
[tool.codespell]
write-changes = true

# --- pytest ---
[tool.pytest.ini_options]
addopts = "-s -p no:pytest_embedded"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
junit_logging = "stdout"
junit_log_passing_tests = false
testpaths = ["test"]

# --- mypy ---
[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_no_return = true
ignore_missing_imports = true
disallow_incomplete_defs = false
follow_imports = "skip"
